Update mt19937 post

--- a/_posts/2018-11-03-seed-mt19937.md
+++ b/_posts/2018-11-03-seed-mt19937.md
@@ -5,9 +5,10 @@ date:   2018-11-03 20:35:41 +0100
 tags: c++ random-number-generator RNG PRNG
 ---
 
-## Seeding the right way
-
-I will just show the example.
+There is a common myth on the Internet that seeding a Mersenne twister
+pseudo-random number generator with a single 32-bit number is invalid because 
+its state contains 624 32-bit numbers. That is not true. Now I will just show
+the example.
 
 ```cpp
 #include <random>
@@ -28,10 +29,6 @@ int main()
 	}
 }
 ```
-
-There is a common myth on the Internet that seeding a Mersenne twister
-pseudo-random number generator with a single 32-bit number is invalid because 
-its state contains 624 32-bit numbers. That is not true.
 
 In its original design from 1998, a problem was discovered when using the
 generator with initial state that is not random enough, e.g. one integer and
